--- a/index.html
+++ b/index.html
@@ -38,6 +38,5 @@
 			<p>FTP-соединение через FileZilla, копирование файлов с сервера на локальный компьютер<br>
 				<img src="10.jpg" id="7" width="100%"> 
 			</p>
-			<p>
-			</p>
+		</body>
 </html>
